--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   schedule:
     - cron: "0 20 * * *"  # 📅 Scrape once a day at 8PM, see crontab.guru for help
+    - cron: "0 13 * * *"
 
 name: Scrape Update 🔄
 jobs:
